@@ -2,6 +2,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - SeqQC
    - Build will fail if no node, npm or bower are available in path
+ - stop using multiple versions of samtools
 
 release 62.9
  - fix for GD image generation test in response to a change in constructor
